--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "nivo": "^0.31.0",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
