--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "jsx-nivo-charts-poc",
+  "name": "jsx-nivo-charts",
   "version": "0.1.0",
+  "description": "A React and Nivo.js combo Application with Bootstrap UI Theming",
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
     "nivo": "^0.31.0",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts-ts": "3.1.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject"
   },
@@ -20,6 +23,8 @@
     "@types/node": "^10.12.5",
     "@types/react": "^16.7.2",
     "@types/react-dom": "^16.0.9",
+    "@types/react-router-dom": "^4.3.1",
+    "gh-pages": "^2.0.1",
     "typescript": "^3.1.6"
   }
 }
